--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "npm": ">=5.6.0"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
-    "zapier-platform-core": "8.0.1"
+    "zapier-platform-core": "^8.4.2"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
